# deduped

./: .dockerignore  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  docker-compose.yml  vcpkg-configuration.json  vcpkg.json
.github/workflows/: ci.yml
cli/: CMakeLists.txt  cli_impl.cpp  cli_impl.hpp  main.cpp
daemon/: CMakeLists.txt  daemon_impl.cpp  daemon_impl.hpp  main.cpp
lib/: CMakeLists.txt  dedup_session.cpp  dedup_session.hpp  engine.cpp  engine.hpp  fs_walk.cpp  fs_walk.hpp  hasher.cpp  hasher.hpp  lock_file.cpp  lock_file.hpp  logging.hpp  repository.cpp  repository.hpp  scan_coordinator.cpp  scan_coordinator.hpp  scanner.cpp  scanner.hpp  scope_exit.hpp  signal_watcher.cpp  signal_watcher.hpp  types.cpp  types.hpp  watcher.cpp  watcher.hpp
root/etc/s6-overlay/s6-rc.d/svc-deduped/: run
tests/: CMakeLists.txt
tests/helpers/: scope_exit.hpp  temp_dir.hpp
tests/integration/: test_apply_hardlink.cpp  test_binaries.cpp  test_crash_recovery.cpp  test_docker_entrypoint.cpp  test_multi_root.cpp  test_scan_and_dedupe.cpp  test_scanner.cpp  test_watcher.cpp
tests/unit/: test_engine.cpp  test_event_handlers.cpp  test_hasher.cpp  test_metadata.cpp  test_repository.cpp  test_types.cpp
